--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,8 @@ services:
     image: redis:alpine
     networks:
       - example-pub-sub-net
+    ports:
+      - "6379:6379"
 
   zeromq-server:
     build:
